# dear-fm

./: .gitignore  Cargo.toml  README.md  dear-fm.ron  imgui.ini  start.sh  state.json
src/: app.rs  circle.rs  files.rs  lib.rs  main.rs  message.rs  render.rs  render_files_window.rs  render_frame.rs  render_table.rs  side_view.rs  state.rs  table_view.rs  update.rs  view.rs
src/render/: mod.rs  render_panel.rs  render_table.rs
