[package]
name = "dear-fm"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
# imgui-wgpu = "0.27.0"
# imgui = { version = "0.12", features = ["docking", "freetype", "tables-api"] }
# wgpu = "28"
env_logger = "0.11"
# imgui-winit-support = "0.13"
# pollster = "0.4"
# winit = "0.30"
log = "0.4.29"
# chrono = "0.4.44"
# humansize = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["fs", "time"] }
# serde_ron = "1.0.0"
